docs/presentation/2026-07-22_2026-09-02/v2/EVIDENCE.md
---
doc_type: PRESENTATION_EVIDENCE
scope: project
status: active
source_of_truth: false
range: 2026-07-22 ~ 2026-09-02
baseline: 2026-07-23 ~ 2026-08-25 (직전 보고 v1) · main `02c1b6ce`(2026-07-21 마지막 커밋)
version: v2
created_at: 2026-09-02
companion: ./deck.html
---

# 근거·확인필요 원장 — 2026-07-22 ~ 2026-09-02 · v2

> 발표 본문의 모든 주장은 여기서 추적된다. 확인필요 항목은 발표 시 "완료/개선"으로
> 단정하지 말고 "진행 중 / 예정 / 확인 필요"로 정직하게 표현한다.

## 0-0. 개정 이력

| 버전 | 일자 | 변경 |
|---|---|---|
| v1 | 2026-09-02 | 최초 작성 (내용·근거 확정) |
| **v2** | **2026-09-02** | **어조 개정 — 내용·근거·수치 무변경.** 발전 과제/마무리 구간의 **요구형 어법을 현황·조건 기술형으로 전면 교체**(사용자 지적: "선택을 강요하는 것처럼 느껴진다"). 상세는 §7 |

> **v2 는 v1 의 주장·근거·상태 판정을 하나도 바꾸지 않는다.** E-/U- 항목, KPI 산식, 검증 결과는 전부 동일하다.
> 바뀐 것은 **같은 사실을 말하는 어법**뿐이다.

---

## 0-A. 핵심 프레이밍 (정직성 — 사용자 확인 2026-09-02)

### (1) 배포 상태 — 이 보고의 "완료"가 뜻하는 것

- **실사용자 대상 라이브(운영) 환경 배포는 아직 이루어지지 않았다.** (사용자 명시, 2026-09-02)
- 이 범위의 모든 작업은 **개발·검증 환경에 배포되어 실측**됐다. 제품 릴리즈노트 본문의
  "배포된 서비스에서 확인했습니다"는 **그 개발·검증 환경 배포본**을 가리킨다 — 라이브 운영
  환경이 아니다.
- 따라서 본 보고에서 **"완료" = 개발 완료 + 검증 환경 실측**이며,
  **라이브 운영에서의 효과·안정성은 전부 미측정**이다. 덱·스크립트 전체가 이 한정을 따른다.

> **직전 보고(2026-08-25 v1)와의 차이 — 정정 기록.**
> 직전 원장 §0-A 는 당시 사용자 확인에 따라 "서비스는 이번 기간 이전부터 실사용 중"이라
> 적었다. 2026-09-02 사용자 확인으로 **라이브(운영) 환경 배포는 미실시**임이 명확해졌으므로,
> 본 보고는 그 기준을 따른다. 두 기술의 정합 해석 = 지금까지의 사용은 **개발·검증 환경 범위**다.

### (2) 회의 결정사항 3건 (2026-09-02, 사용자 전달 — 본 보고의 방향 결정 근거)

| # | 결정 | 본 보고 반영 위치 |
|---|---|---|
| D-1 | **종량제는 요금 부담으로 구성하지 않음.** 구독형 계정을 (서비스에) 연결시키는 것은 공급사 정책 위반. 따라서 **각 개인의 LLM 을 연결**해 쓸 만큼 동작시키도록 구성 | 배경(SCQA) · `feat-bridge` 선택 근거 · 기대효과 |
| D-2 | **Live 환경 실행은 현재 제한됨** — 복제본을 먼저 구성한 뒤 배포 예정. 당장은 **QA 환경까지만 배포** 예정 | 배경 · `feat-qa` · 범위·결정 · 리스크·후속 |
| D-3 | **구글 드라이브 연동은 작업에서 제외.** 이후 별도 필요가 확인되면 도입 검토 | 범위·결정 · 리스크·후속(이월 해소) |

**D-1 의 기록 정합**: `docs/DECISIONS.md` ADR-20260825T170000 의 "대안 (a) 정식 API 키 전환 —
과금이 구독→종량제로 바뀌어 **운영 결정 필요, 별도 트랙으로 이월**"이 이번 회의에서
**미채택으로 확정**됐다. 즉 기록상 열려 있던 갈래가 이번에 닫혔다.

### (3) 직전 보고의 이월 미결 3건 → 이번 기간에 전부 "결정"됨

| 직전 보고 이월 항목 | 이번 기간 상태 |
|---|---|
| ① 구글 드라이브 서비스 통합 | **제외 결정**(D-3) — 미결이 아니라 결정으로 종결 |
| ② DB 복제본 부하분산 구성 | **라이브 배포의 선행 조건으로 확정**(D-2) — 순서가 정해짐 |
| ③ 라이브/운영 DB 접근 범위 결정 | **QA 환경 선행 → 라이브**로 순서 확정(D-2) · 접근 범위 자체는 여전히 열림 → U-002 |

### (4) 표기 규율

- 커밋 해시·PR 번호·`feature-NNNN`·TASK/ADR/CHG id·내부 검증 절차명은 **추적용 내부 참고**이며
  **청중 덱 본문에 노출하지 않는다**(본 원장·발표 스크립트에만 둔다).
- 민감값(계정·비밀번호·토큰·접속좌표·DSN·개인정보)은 **본 원장에도 비노출**.

---

## 0-B. 수집 채널

| # | 채널 | 수집 결과 |
|---|---|---|
| ① | git (**`origin/main` 반영분 기준**) | 커밋 **1,401** · PR 병합 **553** · baseline = `02c1b6ce`(2026-07-21 main 마지막). `--all` 은 누락 탐지 보조로만 사용(미머지 브랜치는 완료로 세지 않음) |
| ② | 정책·프로젝트 문서 | `docs/STATUS.md` · `docs/DECISIONS.md`(ADR-20260825T170000 · ADR-20260826T220000 등) · `docs/LEARNINGS.md`(범위 내 신규 학습 20+) · `docs/ARCHITECTURE.md` · `docs/SECURITY.md` |
| ③ | unit feature 기록 | 범위 내 활동 unit **43개**. FUNCTION/TASK/REPORT/MODIFY/DECISIONS 정독(주요 10개 unit) |
| ④ | 개발 세션 transcript(보조) | 두 홈 · base slug + 변형 글롭으로 스캔 → 범위 내 세션 **566건** 존재 확인. **교차확인된 것만 사실로 채택**, 원문·민감정보 미인용 |
| ⑤ | 이전 기간 발표자료 | `docs/presentation/2026-07-23_2026-08-25/v1`(직전) · `2026-06-17_2026-07-22/v4` |

**릴리즈노트 정본 위치(주의)**: 사용자 대면 릴리즈노트의 정본은 `docs/RELEASE_NOTES.md`
(2026-07-10 이후 미갱신, 운영자·개발자용)가 **아니라** 제품 화면에서 사용자가 읽는 원장
(`unit/feature-0003-agent-web-ui/src/static/release-notes-data.js`)이다. 본 보고의 사용자 대면
서술은 이 원장을 1차 근거로 삼았다.

---

## 0-C. 대표 수치(KPI) 검증 축

| 수치 | 값 | 축 | 산식 / 근거 |
|---|---|---|---|
| K-1 사용자에게 전달된 변화 | **208건** | **검증 가능** | 제품 릴리즈노트 원장에서 범위(2026-07-22~09-01 발행 블록) 안의 `title` 항목 수를 기계 집계. 내역: 신규 44 · 개선 76 · 수정 88 / 작업 화면 147 · 관리 콘솔 45 · 공통 16 |
| K-2 업데이트 안내 발행 | **26개 일자 블록** | **검증 가능** | 같은 원장의 `date` 블록 수(범위 내) |
| K-3 회사 계정 의존 답변 경로 | **0** (두 겹 차단) | **확인**(개발·검증 환경) | 서버 보유 계정으로 나가는 chat 호출을 코드 게이트 + 설정 두 겹으로 차단(feature-0043 REPORT §1, 배포 `11049643` 전 서비스 SHA 일치). **라이브 미적용** |
| K-4 아무도 볼 수 없던 질문 대기 | **1시간+ → 30초 안팎** | **확인**(검증 환경 실측) | 실제 87분 대기 사례 1건의 원인 분해 → 미회수 질문 회수 상한 재설계. 릴리즈노트 2026-09-01 항목이 "배포된 서비스에서 확인" 기재 |
| K-5 작업 단위 | **43개 기능 단위** | **개발 이력 집계**(검증됨 아님) | `git log origin/main --name-only` 로 범위 내 변경 경로 중 `unit/<feature>` prefix 를 유일화한 수. **커밋 수·PR 수·논리 작업 수와는 다른 축** |
| K-6 개발 이력 | 커밋 1,401 · PR 병합 553 | **개발 이력 집계**(검증됨 아님) | `git log origin/main --since/--until` · `--first-parent` + `Merge pull request` 계수. 작업량 대리 지표일 뿐 성과 지표가 아니다 |

> K-5·K-6 은 덱에서 "검증됨" 배지를 달지 않는다(§0-A(4)·스킬 KPI 규율).

---

## 1. 확인된 주장 (근거 있음)

> 이 절의 "확인"은 전부 **개발 완료 + 개발·검증 환경 실측**을 뜻한다(§0-A(1)).

### E-001 · 답변을 만드는 주체를 서비스 계정 → 개인 AI 로 전환
- **kind**: unit-doc(feature-0043 FUNCTION/REPORT) · release-note(2026-08-27) · git
- **ref**: 서버 보유 계정 chat 호출을 두 겹으로 차단하고, 웹 대화 질문을 대기 작업으로 적재해
  개인 머신 AI 가 가져가 답변하는 구조로 전환. 배포 완결 커밋에서 전 서비스 SHA 일치·무중단 blip 0·
  스모크 통과. 로컬 임베딩 축은 **의도적으로 유지**.
- **status**: 확인 (개발 완료 · 검증 환경 배포·실측). **라이브 미적용**
- **note**: 전환 사유의 정본은 회의 결정 D-1(종량제 미채택 + 구독형 연결은 정책 위반).
  기술 기록상으로는 8월 7일 회사 계정 한도 100% 소진으로 인한 서비스 정지가 계기로 남아 있다
  (릴리즈노트 2026-08-27 본문 기재).

### E-002 · 전환으로 끊긴 기존 동작 일괄 복구
- **kind**: release-note(2026-08-27·08-28) · unit-doc(feature-0043)
- **ref**: 그룹 대화 발신자 표시 · 답변의 제품 표시 · 대화 내역 보존 · 첨부 파일 도달 ·
  '재답변'과 'AI 로 고치기' · 관리자 지침(전역/제품/역할/계정/개인) 반영 · 대화 제목 자동 설정 ·
  '실행 단계'의 사유 — 8개 축을 새 경로로 재배선.
- **status**: 확인 (개발 완료 · 검증 환경). 일부 항목의 **화면 표시 확인은 사용자 확인 대기**(U-005)
- **note**: "되살리지 않은 것"도 릴리즈노트에 명시했다(첨부 생성·CSV 내려받기는 8/27 시점 미개방 →
  8/28 에 첨부 쓰기만 개방).

### E-003 · 연결 경로를 "3단계 붙여넣기"로 정리하고 세 갈래로 분화
- **kind**: release-note(2026-08-27·08-28·08-31·09-01) · unit-doc(feature-0043)
- **ref**: ① 명령 한 줄(운영체제 탭 분리) ② AI 에게 조사만 맡기기 ③ AI 에게 전부 맡기기(접힌 보조).
  연결 명령에 서버가 그 자리에서 계산한 인증서 지문·프로그램 검사값과 대조 명령을 동봉.
  기본 OS 탭을 **브라우저가 도는 OS 추측 → 마지막으로 실제 연결됐던 OS 관측**으로 교체(양방향 실측 PASS).
- **status**: 확인 (개발 완료 · 검증 환경 실측)
- **note**: 실제 사용자 컴퓨터에서 끝까지 도는지는 **사용자 확인 필요**(U-005).

### E-004 · 설치·실행 경로의 실패 지점 봉인
- **kind**: release-note(2026-08-31·09-01) · policy-doc(LEARNINGS 2026-08-31 다수)
- **ref**: (a) 실행 단추가 아무 일도 안 하던 것 = 호출 등록이 **브라우저가 도는 OS 가 아닌 쪽**에
  있었음 → 등록 위치 정정 + 소요 80초 → 1초 미만. (b) 설치 명령의 한글 인코딩 표시 누락으로 명령
  자체가 죽던 것. (c) 사내 인증서의 폐기정보 부재를 실패로 다루던 것 → **그 한 가지만** 예외 처리
  (서버 인증서 대조·파일 검사값 대조는 유지). (d) 이름만 있는 빈 파이썬 오인식 → 걸러 냄 +
  동의 후 대신 설치. (e) 설치는 끝났는데 "쓸 수 있는 AI 를 찾지 못했습니다"로 멈추던 것 →
  윈도우식 실행파일명·표준 설치 위치까지 탐색(대상은 알려진 AI 로 한정).
- **status**: 확인 (개발 완료 · 배포된 명령으로 실제 Windows 재현 확인)
- **note**: 성능 수치 "80초 → 1초 미만"은 **등록 단계 소요**이며 연결 전체 소요가 아니다.

### E-005 · 87분 대기의 원인 규명과 회수 상한 재설계
- **kind**: release-note(2026-09-01) · unit-doc(feature-0043)
- **ref**: 한 대화에서 질문 1건에 87분 대기. 그중 **1시간 넘게는 아무도 그 질문을 볼 수 없던 구간**
  — 개인 머신 프로그램이 재기동되면 자기가 이미 집어 간 질문이 30분간 자기 자신에게도 안 보였다.
  조치: 켜질 때·꺼질 때 보유 질문 즉시 반납 → **30초 안팎 재회수**. 화면도 '가져갔다'와
  '진행하고 있다'를 분리 표시.
- **status**: 확인 (개발 완료 · 검증 환경 실측)
- **note**: **측정 조건 분리** — "1시간+ → 30초"는 *미회수 질문의 재회수 가능 시점*이지
  *답변 소요 시간*이 아니다. 답변 자체의 소요는 개인 AI 성능에 좌우되며 본 보고 범위에서 미측정.

### E-006 · 연결이 없으면 질문 전 입력창을 잠그고 그 자리에서 안내
- **kind**: release-note(2026-08-28)
- **ref**: 종전에는 연결이 없어도 질문이 나갔고 이유는 말풍선을 보고서야 알 수 있었다.
  이제 "답변할 프로그램이 켜져 있고 지금 기다릴 때만" 입력창이 열린다. 사유별 2종 안내
  (연결 없음 / 실행 안 됨)와 각각의 조치 단추. 잠금 시 입력·전송·첨부·모델 선택·드래그 투하가
  **함께** 잠긴다(부분 잠금은 "고장"으로 읽히므로).
- **status**: 확인 (개발 완료 · 검증 환경에서 잠금·안내 표시 확인)
- **note**: 실제 연결 시 잠금이 풀리는 왕복은 **사용자 확인 필요**(U-005).

### E-007 · '답변 모델'·'추론 강도' 선택기의 제거 → 재설계 복원
- **kind**: release-note(2026-08-27·08-28·08-31·09-01)
- **ref**: 전환 직후 두 항목은 개인 AI 에게 통하지 않아 **의도적으로 감췄다**(8/27).
  이후 "아는 쪽이 말하면 된다"로 방향을 바꿔, 개인 AI 가 연결 시 자기 도구·모델·추론 강도를
  **스스로 신고**하고 화면은 그 신고를 그대로 보여 주는 구조로 복원(8/28). 신고 없는 AI 는 목록에
  넣지 않는다(있는 줄 알았는데 없는 모델 제거). 목록을 AI 별로 묶어 표시(8/31).
- **status**: 확인 (개발 완료 · 검증 환경 실측)
- **note**: **감췄던 구간의 실제 영향도 기록됐다** — 그동안 모든 질문이 그 컴퓨터의 기본 모델과
  가장 깊은 추론 강도로 처리되어 개인 계정 사용량으로 나갔다(릴리즈노트 8/28 본문).

### E-008 · 기다리는 동안의 표시 — 실행 단계·추론 구간·누적 시간
- **kind**: release-note(2026-08-24·08-28·08-31·09-01) · unit-doc(feature-0043)
- **ref**: (a) 진행 중 표시를 완성된 답변과 **같은 자료·같은 카드**로 통일. (b) 도구와 도구 사이의
  추론 구간을 관측된 간격만 단계로 복원(사고 내용은 지어내지 않음). (c) 표시가 도중에 멈추던 3원인
  — 통신 오류 1회가 감시를 영구 종료 · 대기 예산을 횟수로 계산 · 앞쪽 단계 무음 절단 — 을 각각
  해소(취소와 회선 오류 구분 · 30분 시간 기준 · 절단 사실 명시). (d) 추론 구간은 한 줄로 접고
  최하단 누적 시간은 1초 티커.
- **status**: 확인 (개발 완료 · 검증 환경 화면 실측 다회)
- **note**: 회선 끊김·복구까지 눈으로 보는 확인은 사용자 환경 필요(U-005).

### E-009 · 고정 응답 상한 제거 — 진행하면 기다림이 다시 채워지는 구조
- **kind**: release-note(2026-08-28) · unit-doc(feature-0030 · feature-0043)
- **ref**: 27단계짜리 긴 조사가 개인 머신 쪽 15분 상한에 먼저 잘렸다(그동안 AI 는 계속 답을 만들고
  있었다). 1차로 약 28분까지 늘려 서버 보유 시간과 짝을 맞췄고, **같은 날 고정 상한 자체를 제거**해
  "한 걸음 나아갈 때마다 기다림이 다시 채워지고, 끊는 판단은 서버가 아무 진행도 관측하지 못한
  30분에만" 내리도록 바꿨다. '중단'은 종전대로 즉시.
- **status**: 확인 (개발 완료 · 검증 환경)
- **note**: 긴 조사가 실제로 끝까지 가는지는 **사용자 확인 필요**(U-005).

### E-010 · 답변의 정직성 — 미확인 표기·거부 루프 차단·자체 점검
- **kind**: release-note(2026-07-27·08-03·08-05·08-11·08-19·08-24·08-25·09-01)
- **ref**: (a) 자체 점검을 **지적이 사라질 때까지 반복**으로 바꾸고, 기다리기 어려우면 '즉시 답변',
  끝내 남으면 답변 하단에 명시(7/27). (b) 확인하지 않은 것을 '있다/없다'로 단정하지 않고
  **'미확인'**으로 표기(8/3). (c) 정확도 규칙이 관리자 지침 설정에 **덮여 실제 답변에 적용되지 않던
  경로** 봉인(8/3). (d) 조회 0건을 첨부까지 '없다'로 넓혀 읽던 오류 차단(8/5). (e) 점검이 옳은
  답변까지 되돌리던 오탐 해소(8/11·8/19). (f) 조회 실패 시 원인 **단정 → 후보 제시**로 전환하고
  DB 종류에 맞춘 안내(8/24·8/25). (g) 개인 AI 가 정상 요청을 인젝션으로 오판해 **거부**를 돌려주던
  것 해소 — 나가는 프롬프트를 「수행할 작업 / 참고 맥락 / 비신뢰 데이터」 3구획 신뢰등급으로 분리하고,
  거부한 차례를 다음 요청의 참고 자료에서 제외(9/1).
- **status**: 확인 (개발 완료 · 검증 환경). **답변 품질의 실제 향상폭은 미측정 → U-004**

### E-011 · 첨부 파일 — 계보·비교·삭제/복구·원문 보기·쓰기 개방
- **kind**: release-note(08-06·08-07·08-11·08-12·08-13·08-14·08-16·08-28·09-01)
- **ref**: 삭제·휴지통 복구 · 일괄 내려받기 · 두 버전 나란히 비교(인접·원거리 버전 모두) ·
  파일 유형별 구문 색 · 줄 안 변경 구간 표시 · 이름 순 정렬(숫자는 크기로) · 문서 원문 창 ·
  마크다운 서식 렌더 · 첨부 이름으로 대화 검색. 8/28 에 **답변이 첨부를 다음 버전으로 올리거나
  새로 만들어 붙이는 쓰기**를 개방. 9/1 에 갈래들을 한 카드로 묶고 올린 사람 이름으로 구분.
- **status**: 확인 (개발 완료 · 검증 환경 실측)
- **note**: 쓰기 개방 전에는 "AI 가 정확한 수정 지시를 만들어 보냈는데 반영되지 않았고, 지시가
  본문에서 지워지지도 않았으며, 답변은 '수정했습니다'라고 말했다" — **하지 않은 일을 했다고
  말하던 상태**였음이 기록에 남아 있다(릴리즈노트 8/28 본문).

### E-012 · 대화 정리·탐색 — 폴더·이름변경·이동 연출·자판 오타 검색
- **kind**: release-note(07-23·07-29·08-12·08-24·08-25) · unit-doc(feature-0024)
- **ref**: 재귀 폴더(깊이 상한은 설정값·기존 깊이는 소급 강제 안 함) · 폴더 단위 AI 지침 ·
  폴더 삭제해도 대화 보관 · 우클릭 메뉴(폴더/대화 순서 통일) · 제자리 이름 변경 ·
  이동 시 미끄러지는 연출 + 도착 표식 · 한/영 자판 오타 검색('rmffhqjf'→'글로벌') ·
  첨부 이름 검색 · 대화 검색 오류 복구 · '최근 갱신' 시각이 첫 대화에 멈춰 있던 문제 해소(기존 19건 소급 정정).
- **status**: 확인 (개발 완료 · 검증 환경). feature-0024 는 이번 기간 내 **기능적으로 완결**

### E-013 · 쌓아 둔 지식이 실제로 AI 에게 도달하기 시작
- **kind**: release-note(2026-09-01) · wiki(hot cache 2026-09-01)
- **ref**: 관리 콘솔에 쌓은 지식(용어사전·표/열 설명·값의 뜻·예시 질의·관계)이 **아홉 갈래 중
  한 갈래만** 개인 AI 에게 전달되고 있었다 → **다섯 갈래를 추가**(1층 → 5층). 도구 이름·인자가
  불변이라 개인 프로그램 재배포 없이 도달. 실사용 검증에서 2건을 더 발견해 수정: ① 분량 한도가
  사전 **전체**에 걸려 짧은 낱말(줄임말)이 늘 잘려 나가던 것 → 질문에 실제 등장한 말만 추린 뒤 한도 적용
  ② 낱말 일부만 겹쳐도 같은 것으로 보아 다른 제품 설명이 섞이던 것 → 낱말 단위 판정(한국어 조사 허용).
- **status**: 확인 (개발 완료 · 검증 환경에서 전후 대조 실측 — 빠지던 줄임말 유입 · 타 제품 항목 제거)
- **note**: **한계 명시** — 확인된 것은 "전달된다"까지다. 답변 품질 향상폭은 미측정 → U-004.

### E-014 · 용어사전 전역/제품 축 분리 + 소급 정리 105건
- **kind**: release-note(2026-09-01)
- **ref**: 일반 용어가 특정 제품 사전에 계속 등록되고 같은 뜻이 제품마다 중복됐다.
  등록 시도를 3갈래(제품 전용 즉시 등록 / 조직 통용 후보는 검토 대기 / 일반 용어는 '제외')로 분기.
  승인받은 소급 정리 실행: 일반 용어 69 + 중복 36 = **105건 삭제, 739 → 634**. 삭제분은 복구 가능하게
  보관(되돌리기 경로 동작 확인). 제품마다 뜻이 다를 수 있는 교차 항목 28건은 **의도적으로 존치**.
- **status**: 확인 (개발 완료 · 검증 환경에서 화면 확인 · 건수는 실행 결과 기재)
- **note**: 739·634·105·69·36·28 은 **집행 결과 수치**이며 성능 지표가 아니다.

### E-015 · 관리 콘솔 — 'AI 운영 현황' 4갈래 재편 + 도구 사용량 신설
- **kind**: release-note(2026-08-31·09-01)
- **ref**: (a) 지금 집행되지 않는 설정·권한에 **'미적용' 배지** + 사유·대체 수단 접이판 +
  탭 하단 미적용 건수 합계(8/31). (b) 화면을 [운영 현황 · 브리지 작업 · 도구 사용량 · 기록]
  4갈래로 재편. 첫 화면 수치는 전부 현재 구조(연결된 프로그램·맡긴 작업) 기준이고, 이전 구조의
  토큰·비용 집계는 「기록」으로 옮겨 '전환 이전'이라 명시(지난 기록 무삭제). **「도구 사용량」은 신설**
  — 어떤 도구가 어디에 몇 번 쓰였고 결과가 어땠는지가 처음으로 화면에 나온다. (c) 연결된 프로그램
  목록을 계정별 4단계(미연결 / 연결됐으나 미실행 / 실행 중이나 능력 미신고 / 신고했으나 설치본 상이)로
  구분 — 계정마다 조치가 다르므로.
- **status**: 확인 (개발 완료 · 검증 환경 실측)

### E-016 · 관리 콘솔의 AI 기능을 개인 AI 가 대신 처리 + 가벼운 모델 라우팅
- **kind**: release-note(2026-08-31·09-01)
- **ref**: '미적용'이던 것 중 3종(메타데이터 자동완성 단건·일괄 · 시스템 프롬프트 자동작성)을
  연결된 개인 AI 가 처리하도록 개방. 단추 문구가 대기→처리 중→완료로 전이. 지시문은 종전 경로와
  동일본을 사용해 결과 형식 불변. 콘솔이 맡기는 작업은 **가벼운 모델**로 라우팅하되, 개인 AI 가
  신고한 목록 안에서만 고르고 없으면 그 AI 기본값에 위임(없는 이름을 보내면 실행 자체가 실패하므로).
  **추론 강도는 낮추지 않았다** — 강도 어휘가 AI 마다 달라 임의 추정이 사용자가 고르지 않은 값을
  반영하기 때문.
- **status**: 확인 (개발 완료 · 검증 환경에서 콘솔·대화가 서로 다른 모델로 도는 것 확인)
- **note**: 일부 AI 종류는 **시험 환경에서만 확인** — 릴리즈노트 본문이 그 한정을 명시.
  나머지 3종(관계도 능동 분석 · 배경 분석 2종)은 산출물이 자동 저장되는 자리라 **미개방**.

### E-017 · 관계도(그래프 뷰) 정리와 탐색 대상 확장
- **kind**: release-note(07-24·07-27·07-28·07-30·07-31·08-03·08-05·08-12·08-13) · unit-doc(feature-0040·0029)
- **ref**: (a) 연결선을 방향·개수·신뢰도가 드러나게 재작도 + 확대/축소에도 읽히는 이름표 +
  역할은 왼쪽 색 배지. (b) 컨텐츠 카테고리 과세분화 정리 · 이름만 다른 동의 묶음 통합 ·
  관련 묶음 근접 배치 · 접으면 관계 한 줄 요약. (c) **트리거·자동 실행 작업·뷰·시노님·시퀀스**를
  탐색 대상과 그래프에 편입(벤더 객체명이 아니라 **역할**을 축으로 분류). (d) 'AI 능동 분석' 문장을
  실제 데이터와 대조한 **판정 배지 + 판정 근거 한 줄** 표시(배지 없음 = 문제없음이 아니라 판정 전).
  (e) 펼침 시 방금 누른 것을 화면에서 잃지 않도록 카메라 처리.
- **status**: 확인 (개발 완료). **(c) 는 코드·단위검증 완료이나 라이브 시각검증·배포 미수행** → U-006
- **note**: 대규모 데이터에서의 체감 성능은 미측정 → U-006.

### E-018 · 밖의 AI 도구가 서비스 데이터를 직접 조회하는 창구
- **kind**: unit-doc(feature-0041) · release-note(08-13·08-14)
- **ref**: 외부 AI 런타임이 **스스로 추론하면서** 데이터소스·지식·메타정보에 접근하는 도구 표면.
  추론이 호출자 쪽에서 일어나므로 **토큰 비용은 호출자 부담**이고 서비스는 자격증명을 보관하지 않는다.
  주소만 등록해 내 계정으로 연결 · 공인 IP 접속에서도 연결 시작 가능 · 제출한 답변 본문을 관리
  콘솔에서 열람. 신규 경로는 전부 토큰 뒤에 있고 익명 연결은 엣지에서 차단(실측).
- **status**: 확인 (개발 완료 · 검증 환경 배포 후 점검 10회 전건 통과)
- **note**: **사람 브라우저 인가 1회가 필요한 인증 e2e 구간 1건이 미완**으로 남아 있다 → U-003.

### E-019 · 배포가 브리지 축을 보지 못하던 사각 제거
- **kind**: unit-doc(feature-0045) · release-note(08-27·08-12·08-11)
- **ref**: 개인 AI 가 서버에 붙어 대기하거나 조사 중인 상태를 배포 게이트가 **아예 세지 않아**
  "조용함(0)"으로 읽고 replica 를 내렸다 — 즉 "브라우저와 AI 가 연결돼 주고받는 중"이 정확히 사각이었다.
  조치: 그 축을 관측 가능하게 만들고 **대기는 즉시 비우고 작업은 끝날 때까지 기다린 뒤 교체**.
  창구를 두 벌로 늘려 한쪽 교체 중 다른 쪽이 받는다.
- **status**: 확인 (개발 완료 · 실제 배포에서 끊김 0 확인)
- **note**: **한계가 기록돼 있다** — 상한(3분) 초과 시 진행 중 왕복이 끊길 수 있고 그때 질문은 보존되나
  거기까지의 조사는 버려진다. 이 방식으로 넘어가는 **첫 배포 1회는** 창구가 잠깐 비어 재연결이 필요할
  수 있다(그 이후부터 무중단). 실제 그 첫 배포에서 구 창구 정리 작업 1건이 실패해 약 2분간 창구가
  닫힌 사건이 있었고 그 결함도 함께 수정됐다.

### E-020 · 성능 병목 지도 작성과 1차 개선
- **kind**: unit-doc(feature-0026·0027·0028·0029)
- **ref**: **측정 사각을 먼저 메운 뒤** 개선했다. 라이브 관측(2026-07-20~27) 결과:
  답변 E2E 평균 141초 = 주 추론 87.8초(62%) + 답변 자체 점검 46.4초(33%) + 잔여 ~7초.
  개선: 답변 뒤 큐레이션 3건을 종결 후로 이동(체감 **-25~35초 기대**) · 근거수집 DB 연결 3→1 ·
  DB 버퍼 128MB→1G · 정적 자산 압축/캐시 · 장기 연결 대기를 이벤트 루프에서 분리 ·
  스냅샷 DB 연결 4~5→1 · 그래프 동기화 무변경 시 갱신 억제.
- **status**: 확인 (관측 인프라·개선 개발 완료 · 검증 환경). **개선 후 E2E 재측정은 미수행 → U-004**
- **note**: **측정 조건 분리 필수** — 141초는 *서버가 기록한 답변 E2E 평균*(103건, p50 90초/p95 350초)이고,
  "-25~35초"는 *기대치*다(실측 아님). 또한 이 측정은 **전환 이전(서비스 계정 답변)** 구조의 값이므로
  전환 이후 구조에 그대로 대응시키면 안 된다.

### E-021 · 화면 코드 모듈화 (사용자 무영향 구조 개선)
- **kind**: unit-doc(feature-0038) · policy-doc(ADR-20260805T153000)
- **ref**: 화면 코드 3파일(관리 콘솔 14,007줄 · 작업 화면 13,165줄 · 스타일 9,328줄)을
  동작 불변으로 점진 분할. 작업 화면 오케스트레이터 **11,119 → 8,082줄(-27%)**.
- **status**: 확인 (개발 완료 · 동작 불변 검증)
- **note**: 목적은 "AI 작업자가 전체를 읽고 정확히 고칠 수 있는 크기". **사용자 가시 변화 0**이므로
  성과가 아니라 *속도·정확도의 전제*로 보고한다.

### E-022 · 개인 AI 프로그램 자체의 구조 개선
- **kind**: unit-doc(feature-0043 REPORT 2026-09-02)
- **ref**: 사용자 보고("작업자 AI 간 작업 충돌이 빈번")의 원인을 실측으로 둘로 확정 —
  ① 정본과 배포본이 **바이트 동일한 두 커밋 대상**이라 90일 49커밋이 예외 없이 둘 다 고쳤다(49/49)
  ② 4,238행 단일 파일이라 관심사가 달라도 머지 지점이 겹쳤다. 조치: 소스를 18모듈(최대 784행)로 분할하고
  내려받는 단일 파일은 **빌드가 생성**. 커밋 대상 사본 **4개 → 0개**. 산출물 차이는 4,267행 중 57행이며
  전부 기계적 전환이라 사용자가 받는 동작은 불변.
- **status**: 확인 (개발 완료 · 전체 검사 통과 · 적대 변형 8/8 검출)
- **note**: 라이브 내려받기→실행 왕복은 **배포 후 확인 항목으로 남아 있다** → U-005.

### E-023 · 러너 우선순위·연결 수명·로그
- **kind**: release-note(08-28·09-01) · wiki(hot cache)
- **ref**: (a) 같은 계정에 프로그램이 둘 뜨면 예전 것이 질문을 먼저 집어 옛 방식으로 답하던 문제 —
  판정 축을 "파일 내용이 낡았는가"(내용이 같으면 무력)에서 **"어느 쪽이 나중에 연결됐는가"**로 교체.
  계정이 다르면 예외(다른 사람 프로그램은 함께 돈다). (b) 하루 두 번 끊기던 연결과 14일째 갑작스러운
  로그아웃 — "시간이 지났다"가 사용자가 직접 끊은 것과 같은 취급이던 것이 뿌리. 이제 일하는 중에도
  살아 있다는 신호를 보내고 그때마다 수명이 함께 연장된다(로그인 상태를 넘겨서까지는 아님).
  (c) 실패 사유를 화면에 싣고 유형별 다음 행동을 안내(비밀값 마스킹·길이 제한) + 개인 컴퓨터의
  프로그램 기록을 사람 줄/기계 원장 2계층으로 재작성(Windows 에서도 기록·상한 있음).
- **status**: 확인 (개발 완료 · 검증 환경 · 반복 시험). **두 프로그램 실제 경합·자가 종료는 미실증** → U-005

### E-024 · 여러 질문 동시 처리(자리 자동 증감)
- **kind**: release-note(2026-08-28)
- **ref**: 개인 AI 프로그램이 한 번에 한 건만 처리하던 것을, 밀린 질문 수만큼 자리를 늘리고
  (최대 8) 5분 이상 안 쓰인 자리는 오래된 것부터 되돌리는 구조로 변경(최소 1자리 유지).
  예측이 아니라 **관측된 질문 수에만** 반응하고, 자리 계산은 응답이 돌아오는 순간에만 한다.
- **status**: 확인 (개발 완료 · 실제 서비스에 붙여 자리 증감을 기록으로 확인)

### E-025 · 라이브 전 QA 파이프라인 설계 확정 (설계까지 — 구현 미착수)
- **kind**: unit-doc(feature-0044 FUNCTION/REPORT/TASK)
- **ref**: 격리망 QA 머신 + 라이브 전용 호스트 분리, 빌드 머신 → 산출물 저장소 → QA → 라이브로 이어지는
  **단방향 승격형** 파이프라인. 설계 rev.3 확정, 전제 13축 중 12축 결정.
  rev 개정 과정에서 전제 3개가 뒤집혔다 — ① 사내 컨테이너 레지스트리 부재 확인(전달 수단 재설계)
  ② 라이브도 전용 호스트로 분리(오히려 설계가 단순해짐 — QA·라이브가 같은 절차, 채널만 다름)
  ③ **로컬 LLM 전면 폐지**로 GPU 불요(실측 결과 남은 유일한 GPU 소비자는 임베딩 한 축이었고, 그 이관이
  QA 세팅의 선행 조건이 됨).
- **status**: 확인 (**설계 확정** — 구현 착수는 사용자 승인 대기)
- **note**: **미검증 명시** — 폐쇄망 대응은 "설계상 타당하나 미검증"이며 첫 실증 지점은 구현 1단계다.
  미확인 전제 1건(사내 패키지 미러 유무)과 외부 의존 1건(임베딩 사내 이관)이 열려 있다.
  하드웨어 2대 확보(권장 8~12 vCPU / 32GB / 400GB NVMe / **GPU 불요**)는 사람 결정·리드타임 사안.

### E-026 · 운영 정기 작업의 실행 주체 이관
- **kind**: unit-doc(feature-0039)
- **ref**: 운영 정기 잡 4종(플랫폼 논리 백업 · 복원 리허설 · 메타데이터 그래프 동기화 증분/전량)을
  호스트 최고권한 스케줄러에서 **전용 컨테이너 서비스**로 이관. 스케줄 정본이 구성 파일로 이동하고
  잡 로직은 이미지 안에 실린다. 산출물 경로·시각·동시성 가드는 이관 전과 동일.
- **status**: 확인 (개발 완료 · 검증 환경)

### E-027 · 반복 장애의 구조적 봉인 (재발 → 단일 관문)
- **kind**: policy-doc(ADR-20260825T170000) · release-note(08-25·08-26)
- **ref**: 상위 모델 호출이 429 로 거부되는 장애가 **재발**했다. 원인은 공급사가 요구하는 식별 문자열을
  **호출측 3곳에 개별 배치**했던 것이고, 그 3곳 밖의 경로는 무방비였다. 라이브 대화가 18회 재시도(5분)
  끝에 실패했고 사용자에게는 **원인과 무관한 안내**가 나갔으며, 진단도 두 차례 오판했다(사용량 소진으로).
  조치: 주입을 **전송 직전 단일 관문**으로 접고, 관문 미경유·반환값 버림 등 흔한 누락 형태를 배포 전
  기계 검사로 잡는다(변형 6종 역검증 전건 검출). 8/26 에는 같은 계열의 다른 값 1건이 중간 경로 규칙
  변경으로 요청 자체를 거부시키던 문제도 제거.
- **status**: 확인 (개발 완료 · 검증 환경에서 실제 질문 왕복으로 정상 답변 확인)
- **note**: **한계가 ADR 에 명시돼 있다** — 정적 검사는 값이 여러 함수를 건너 흐르는 정교한 우회까지
  잡지 못한다. 최종 안전망은 배포 후 실측이다. 또한 이 게이트는 공급사 정책이라 예고 없이 바뀔 수 있다.

### E-028 · 열어 둔 위험을 문서로 영구화(억제)
- **kind**: policy-doc(ADR-20260826T220000)
- **ref**: 적대 검토가 여러 라운드에 걸쳐 반복 제기한 지적(소유자 미상 이미지 경로)에 대해,
  **닫지 않기로** 결정하고 그 근거·잔여 위험·재개봉 조건을 문서로 고정했다. 근거는 가용성 비용 —
  롤링 배포 중 구·신 형식이 공존하는 창에서 그것을 막으면 **1:1 사용자까지** 쓰기 도구가 통째로 막힌다.
  텍스트 축에는 같은 비용이 없어 **거기만 닫았고 비대칭은 의도된 것**이다.
- **status**: 확인 (결정·기록 완료)
- **note**: 이 항목은 "위험을 없앴다"가 아니라 **"위험을 알고 열어 두기로 했다"**로만 발표해야 한다.

---

## 2. 확인 필요 (근거 부족·불일치·단정 위험 — "발전 과제"로 발표)

### U-001 · 라이브(운영) 환경 배포와 그 효과
- **왜 확인필요**: 배포 미확인 — 실사용자 대상 라이브 배포가 **아직 이루어지지 않았다**(사용자 확인 2026-09-02).
- **가진 것 / 없는 것**: 있음 = 개발 완료 + 검증 환경 배포·실측 기록 다수 · QA 파이프라인 설계 rev.3.
  없음 = 라이브 배포 실적 · 라이브 부하에서의 안정성 · 실사용자 규모에서의 체감.
- **확인 방법(제안)**: D-2 순서대로 ① DB 복제본 구성 ② QA 환경 구축·승격 검증 ③ 라이브 분리 배포.
  각 단계의 게이트 통과 기록을 다음 보고의 근거로 삼는다.

### U-002 · 라이브/운영 DB 접근 범위
- **왜 확인필요**: 사람 결정 대기 — 직전 보고부터 이월. D-2 로 **순서**(QA → 라이브)는 확정됐으나
  접근 범위 자체는 미결.
- **가진 것 / 없는 것**: 있음 = 조회 전용 가드·부하 게이트·감사 원장. 없음 = 어느 운영 DB 를 어느 범위까지
  열지에 대한 결정.
- **확인 방법(제안)**: 보안·운영 담당과 대상 DB·계정 권한·감사 요건을 표로 확정.

### U-003 · 밖의 AI 도구 연결의 인증 이후 구간 종단 확인
- **왜 확인필요**: 사람의 브라우저 인가 1회가 필요해 자동 검증으로 닫히지 않는 구간 1건이 남아 있다.
- **가진 것 / 없는 것**: 있음 = 배포 후 점검 10회 전건 통과 · 익명 차단 실측. 없음 = 인가 이후 종단 왕복 1건.
- **확인 방법(제안)**: 담당자 1인이 실제 브라우저로 인가 1회 수행 후 종단 왕복 기록.

### U-004 · 답변 품질·응답 속도의 실제 개선폭
- **왜 확인필요**: 수치 미측정. 정직성 규칙·자체 점검·지식 도달(1층→5층)·성능 1차 개선은 **개발·배선까지**
  확인됐고, 그것이 답변 품질/속도를 얼마나 바꿨는지는 재지 않았다.
- **가진 것 / 없는 것**: 있음 = 전환 이전 구조의 병목 지도(E2E 평균 141초 분해) · 전달 여부 전후 대조.
  없음 = 개선 후 E2E 재측정 · 품질 평가 기준·표본.
- **확인 방법(제안)**: 대표 질문 세트를 고정해 전/후 동일 조건으로 소요·정확도 측정.
  **주의**: 전환 이후에는 답변 소요가 개인 AI 성능에 좌우되므로 측정 설계에 그 축을 넣어야 한다.

### U-005 · 사용자 컴퓨터에서만 확인되는 항목
- **왜 확인필요**: 검증 환경에서 닫히지 않는 구간이다. 릴리즈노트가 항목마다 그 사실을 명시하고 있다.
- **대상**: 중단 후 이어 묻기 왕복 · 실패 사유가 실제 화면에 뜨는 것 · 예전 프로그램의 자가 종료 ·
  두 프로그램 실제 경합 · 파이썬 대신 설치 · 긴 조사 완주 · 잠금 해제 왕복 · 연결 3경로 완주 ·
  새 프로그램 내려받기→실행 왕복.
- **확인 방법(제안)**: 담당자 2~3인이 각자 환경(Windows / WSL / macOS)에서 체크리스트 1회 왕복.

### U-006 · 관계도 확장분의 라이브 시각검증과 대규모 체감
- **왜 확인필요**: DB 객체 확장(트리거·자동 실행 작업·뷰 등)은 **코드·단위검증까지만** 완료이고
  라이브 시각검증·배포가 미수행이다. 카테고리 정리의 효과(과세분화 감소·배치 개선)도 미관측.
- **확인 방법(제안)**: 배포 후 실제 브라우저로 객체 유형별 표시·필터·상세 확인 + 전후 스크린샷 대조.

### U-007 · 회의 결정 3건의 문서 정본화
- **왜 확인필요**: D-1~D-3 은 **회의 구두 결정으로 전달**받았고, 본 원장이 그 1차 기록이다.
  프로젝트 결정 정본(`docs/DECISIONS.md`)에는 아직 ADR 로 반영되지 않았다.
- **확인 방법(제안)**: D-1(종량제 미채택 + 개인 LLM 연결) · D-2(라이브 순서) · D-3(구글드라이브 제외)를
  각각 ADR 로 승격. 본 보고는 문서 정본을 수정하지 않으므로 별도 작업이 필요하다.

### U-008 · QA 파이프라인의 선행 조건 2건
- **왜 확인필요**: ① 사내 패키지 미러 유무 미확인(있으면 경로 치환, 없으면 오프라인 번들)
  ② 임베딩의 사내 이관 — 실측상 남은 **유일한 GPU 소비자**이며 QA 세팅의 선행 조건.
- **확인 방법(제안)**: 인프라 담당 확인 1회 + 이관 시 벡터 차원·전송 계약·가용성 계약 점검.

---

## 3. 특별 주의 항목 (단정 절대 금지) — 분류표

| 항목 | 분류 | 근거 |
|---|---|---|
| **실제 배포 여부** | **§2 U-001** — 라이브 미실시. 검증 환경 배포는 §1 다수 항목에서 확인 | 사용자 확인 2026-09-02 |
| **테스트 결과** | §1 (E-018 점검 10회 · E-022 적대 변형 8/8 · E-020 관측 인프라) — 단 **라이브 부하 시험 없음** → U-001 | unit REPORT |
| **성능 개선 수치** | 병목 지도(141초 분해) = §1 E-020 **확인**. 개선폭(-25~35초) = **기대치, §2 U-004** | feature-0026/0027 |
| **장애 재발방지 효과** | 구조 봉인 = §1 E-027 확인. **재발률 감소 실측은 없음** → U-004 | ADR-20260825T170000 |
| **화면 변경 전후 자료** | 실측 스크린샷 **미확보** → 덱의 전/후는 전부 **도식 재구성**(배지 표기) | — |
| **문서-코드 불일치** | 1건 확인·정정 기록: 사용자 대면 릴리즈노트 정본이 `docs/RELEASE_NOTES.md`(07-10 이후 미갱신)가 아니라 제품 내 원장이다 → §0-B 에 기록 | 본 원장 |

---

## 4. 디자인·시각 근거 (Phase 5.0 — 매 호출 최신화 기록)

- **봉투 재추출**: `docs/presentation/index.html` 및 직전 덱(`2026-07-23_2026-08-25/v1`)의 `:root`
  토큰을 그대로 상속 — warm neutral `#f7f7f4` / 단일 파랑 accent `#2563eb` / 2겹 soft-shadow /
  Geist·D2Coding 로컬 스택 / `--r-sm|md|lg`. 파생은 얇게만 신규(`--text-3` 등, 대비 실측 통과분).
- **트렌드 조사(2026-09-02 수행)**:
  - executive/enterprise deck — "clarity-first, one key idea per slide", 미니멀 + 따뜻한 톤,
    bento grid 모듈 조판, 데이터 스토리텔링(차트 나열이 아님), 모듈형 디자인 시스템 → **채택**
    (기존 bento·단일 accent·절제 모션과 정합).
  - 세로형(9:16) 슬라이드 급성장 → **기각** (상부보고 대면 발표 맥락 · 구조 불변 원칙.
    단 반응형 breakpoint 로 좁은 폭은 이미 대응).
  - 초대형 볼드 타이포(화면 50% 점유) → **부분 채택** (제목 `clamp()` 상한만 소폭, 극적 hero swing 금지).
  - CSS Baseline 2026 — `color-mix`/상대 색 함수 전 엔진 baseline, container query 널리 사용 가능,
    `contrast-color()`·container style query 는 **2026 신규(newly available)** → **신규 2종 기각**
    (사내 락다운 브라우저 하한 미실측). `color-mix` 는 **hex 폴백 2회 선언**으로만 사용.
- **3중 필터**: 봉투 정합 · 자기완결 offline(외부 URL 0) · 상부보고 절제 톤 — 전부 통과분만 반영.
- **접근성**: 본문 `--text`(15.4:1)/`--text-2`(7.1:1) · 상태색은 라벨 텍스트로 쓰지 않고 어두운 잉크 파생 사용 ·
  모든 배지 색+라벨+형태(SVG) 3중 · `focus-visible` · `prefers-reduced-motion` 가드 ·
  전/후 도식은 인라인 SVG + `role="img"` + `aria-label`.
- **반응형**: fluid wrap + 명시 breakpoint(1080/920/720/480px) · 넘침 시 세로 스크롤(클리핑 금지) ·
  `auto-fit`/고정 폭 미사용 · 표는 `overflow-x` 래핑.

---

## 5. 발표 전 확인 요망 (요약)

1. **U-001** 라이브 배포 미실시 — 발표 전반의 "완료" 표현을 개발·검증 기준으로 읽어 주십시오.
2. **U-007** 회의 결정 3건의 ADR 승격 (본 보고는 문서 정본을 수정하지 않음).
3. **U-008** QA 파이프라인 선행 조건 2건 + 하드웨어 2대 확보(리드타임).
4. **U-002** 라이브/운영 DB 접근 범위 결정.
5. **U-004 / U-005 / U-006** 품질·속도 측정, 사용자 환경 왕복 점검, 관계도 확장분 시각검증.

---

## 6. 자기검증 결과 (Phase 6 — 2026-09-02 실행)

| # | 게이트 | 결과 | 측정값 |
|---|---|---|---|
| 1 | 민감정보 스캔(3파일) | **PASS** | 실제 민감값 0. 유일 히트는 본 원장 §0-A(4)의 «비노출» 규율 문장 자체 |
| 2 | 청중 덱 식별자 스크럽 | **PASS** | `deck.html` 내 `feature-NNNN`·PR#·커밋해시·ADR/TASK/CHG/REV id·E-/U- 코드·동반 파일명 노출 **0** |
| 3 | 자기완결(offline) | **PASS** | 외부 URL·`<link rel=stylesheet>`·`@import`·원격 폰트/이미지/JS **0건** |
| 4 | 반응형 | **PASS** | 명시 breakpoint 4단(1080/920/720/480px) · `auto-fit`/`auto-fill` 실사용 0(히트 3건 전부 «미사용» 주석) · 고정 폭 0(히트 4건 전부 `max-width` 미디어쿼리) · 슬라이드 세로 스크롤 허용 · 표 `overflow-x` 래핑 |
| 5 | 전/후 시각 | **PASS** | 기능 11갈래 전부 before/after 인라인 SVG(각 11) · `role="img"`+`aria-label` **22/22** · 폴백 표기(«실제 화면 대신 개념 도식») 11 |
| 6 | 배지 3중 병기 | **PASS** | 배지 50개 전부 색+라벨+SVG 형태 동반(50/50) |
| 7 | doc_type 정합 | **PASS** | `PRESENTATION_DECK`(meta) · `PRESENTATION_SCRIPT` · `PRESENTATION_EVIDENCE` |
| 8 | 접근성·디자인 | **PASS** | `focus-visible` 5곳 · `prefers-reduced-motion` 가드 · `forced-colors` 폴백 · `color-mix` 는 hex 폴백 2회 선언으로만 · `--diff-*` 오용 0 |
| 9 | 정직성 경계 | **PASS** | «라이브 배포 미실시» 고지가 **표지·범위·마무리 3곳 + meta description**에 명시. «배포 완료/검증되었습니다/완전히 해결» 류 단정 표현 **0** |
| 10 | KPI 검증축 | **PASS** | «검증됨» 배지는 **K-1(208건, 제품 안내 원장 집계) 1건만**. 파생 수치 43개는 «개발 이력 집계 · 작업량 지표»로 강등 |
| 11 | 기능 5블록 완전성 | **PASS** | 11갈래 × 5블록 = 배경 11 · 화면흐름 11 · 전후 11 · 선택근거 11 · 기대효과 11. 기대효과 배지 분포 = 확인 7 / 발전예정 3 / 결정대기 1 |
| 12 | 근거 정합 | **PASS** | 확인 항목 E-001~E-028(28건) · 확인필요 U-001~U-008(8건) · 특별주의 6항목 분류표 존재 |
| 13 | Anti-pattern 8종 | **PASS** | 커밋 메시지 나열 0 · 변경 파일 목록 0 · 선택 근거 누락 0 · 전후 비교 누락 0 |

### 6.1 렌더 실측 (headless Chromium, 5개 폭)

| 뷰포트 | 슬라이드 | 가로 넘침 | JS 오류 |
|---|---|---|---|
| 1440×900 | 20 | 0 | 0 |
| 1280×800 | 20 | 0 | 0 |
| 1024×768 | 20 | 0 | 0 |
| 768×900 | 20 | 0 | 0 |
| 420×860 | 20 | 0 | 0 |

- 네비게이션: `1/20` → `→` → `2/20` → `End` → `20/20` 정상. 목차 오버레이 열림 + 항목 20개 생성 확인.
- **미수행**: 실제 Windows 브라우저 시각검증(PB 계열)은 본 산출물이 정적 문서이고 배포 대상이 아니므로 생략. 필요 시 발표 전 별도 수행.

### 6.2 색 대비 실측 (WCAG, 계산값)

| 조합 | 대비 | 판정 |
|---|---|---|
| 본문 잉크 / 배경 | 14.33 | 텍스트 PASS |
| 보조 텍스트 / 표면 | 7.11 | 텍스트 PASS |
| 3단계 텍스트 / 표면 | 5.51 | 텍스트 PASS |
| 신규 배지 잉크 / 배경 | 6.07 | 텍스트 PASS |
| 완료 배지 잉크 / 배경 | 4.64 | 텍스트 PASS |
| 경고 배지 잉크 / 배경 | 4.68 | 텍스트 PASS |
| **범위 제외 배지(신규 파생)** | 5.90 | 텍스트 PASS |
| 이어받음 배지 잉크 / 배경 | 6.29 | 텍스트 PASS |
| 전 도식 잉크 / 전 배경 | 4.73 | 텍스트 PASS |
| 후 도식 잉크 / 후 배경 | 6.12 | 텍스트 PASS |
| accent / 표면 (non-text) | 5.17 | PASS |
| 도식 회색 선 / 전 배경 (non-text) | 3.46 | non-text 전용 — **텍스트에 미사용** |

> 이번 버전에서 신규 도입한 파생 토큰은 «범위 제외» 배지 3색 한 벌뿐이며, 대비 5.90 으로 텍스트 기준을 충족한다.

---

## 7. v2 어조 개정 기록 (2026-09-02)

### 7.1 지적

사용자 검토 — **"«지금 결정해 주시면 다음 기간에 바로 착수합니다» 와 같은 어조는 진척 보고
발표에 구성되기에 적절하지 않다. 청중 입장에서는 마치 선택을 강요하는 것과 같이 느껴진다."**

### 7.2 진단

발전 과제(`#risk`)·마무리(`#outro`)·범위(`#scope`)·라이브 경로(`#feat-qa`) 네 슬라이드에서
미결 항목을 **«요청»의 문법**으로 서술하고 있었다. 진척 보고의 화행(speech act)은 **보고**이지
**요청**이 아니므로, 같은 사실을 **현황·선행 조건 기술**로 바꾼다. **내용은 그대로 두고 어법만 교체**했다.

### 7.3 교체 내역 (deck.html · 8곳)

| 위치 | v1 (요구형) | v2 (현황·조건 기술형) |
|---|---|---|
| `#risk` kicker | 발전 과제 · **다음 단계와 의사결정 요청** | 발전 과제 · **다음 단계와 선행 조건** |
| `#risk` 제목 | **지금 결정해 주시면 다음 기간에 바로 착수합니다** | **남은 과제와, 각 과제가 무엇에 달려 있는지 정리했습니다** |
| `#risk` 표 헤더 | 다음 단계 · **필요한 결정** | 다음 단계 · **선행 조건** |
| `#risk` QA 행 | **구현 착수 승인** + 장비 2대 확보(리드타임 있음) | 착수와 **장비 2대 확보가 선행**됩니다. 장비 조달에는 리드타임이 있습니다 |
| `#risk` 접근범위 행 | 보안·운영 담당과 표로 **확정 필요** | …가 남아 있습니다. 보안·운영 담당과의 **협의 사항**입니다 |
| `#risk` 콜아웃 | **가장 시급한 것은 장비 확보**입니다 — **승인 즉시 요청하는 편이 전체 일정을 앞당깁니다** | **일정에 가장 크게 작용하는 변수는 장비 조달**입니다 — 리드타임이 있어, **착수 시점이 그대로 전체 일정에 반영**됩니다 |
| `#outro` 카드3 · 콜아웃 | **남은 것은 착수 승인과 장비**입니다 / **필요한 결정** — … | **다음 단계는 QA 환경 구축**이며, 착수와 장비 확보가 그에 앞섭니다 / **진행에 앞서 정리가 필요한 사항** — … |
| `#feat-qa` 기대효과 · `#scope` 표 | **남은 것은 사람 결정**입니다 — 구현 착수 승인 + … / 구현 착수 승인 + 장비 2대 확보 **대기** | **다음 단계는 구현**이며, 착수와 장비 2대 확보가 **그에 앞섭니다** / 착수와 장비 2대 확보가 **선행**됩니다 |

> 목차(JS `titles`) 항목 «다음 단계와 의사결정 요청» → «다음 단계와 선행 조건» 도 함께 교체.

### 7.4 교체 내역 (SCRIPT.md · 4곳 + 규율 신설)

- §19 대사 도입부 — "오늘 **결정해 주시면** 바로 착수할 수 있는 것" → "여덟 가지 과제가 남아 있습니다.
  각각이 **무엇에 달려 있는지** 함께 정리했습니다."
- §19 — "**승인 즉시 요청하는 편이** 전체 일정을 앞당깁니다" → "착수 시점이 **그대로 전체 일정에 반영**됩니다".
  "표로 **확정해 주셔야 합니다**" → "**협의 사항으로 남아 있습니다**".
- §20 마무리 — "남은 것은 **착수 승인과 장비**입니다" → "다음 단계는 QA 환경 구축이며, 착수와 장비 확보가 그에 앞섭니다".
- 부록 B Q4 — "**저희 쪽 지연 요인이 아니라 의사결정과 조달 리드타임**입니다"(책임 전가형) →
  "**순서 자체가 그렇게 잡혀 있습니다.** 일정에 가장 크게 작용하는 변수는 **장비 조달 리드타임**입니다"
  + 책임 전가 어법 금지 주석.
- **§부록 A-2 «어조 규율 — 보고이지 요청이 아니다» 신설** — 요구형 ↔ 기술형 대응표 7행.
  이후 버전·다음 기간 보고에서도 계승한다.

### 7.5 유지한 것 (과교정 방지)

- **미결·리스크를 숨기지 않는다** — 8개 과제 표, 확인 단계 5행 표, «라이브 배포 미실시» 고지,
  «일부러 열어 둔 위험»은 **전부 그대로**다. 어조를 부드럽게 한다는 이유로 정직성을 낮추지 않았다.
- **선행 조건의 구체성도 그대로**다 — 장비 2대·리드타임·그래픽 장비 불요·협의 대상까지 명시한다.
  듣는 쪽이 판단하는 데 필요한 정보를 빼면 그건 어조 개선이 아니라 정보 누락이다.
- 발표 중 «이 표를 봐 주십시오» 류의 **주의 환기**는 요구형이 아니므로 유지(청중에게 결정을 압박하지 않는다).

### 7.6 재검증

- 요구·압박 어법 스캔(`결정해 주시면`·`주셔야`·`의사결정 요청`·`필요한 결정`·`승인 즉시`·`시급`·`앞당깁`·
  `착수 승인`·`남은 것은`) — **deck.html 히트 0**.
- 잔여 «승인» 2건은 (a) 기능 상태 배지 «구현은 승인 대기», (b) 외부 도구 연결의 브라우저 인가 1회 —
  **둘 다 청중에 대한 요청이 아니라 기술 상태 서술**이라 유지.
- Phase 6 게이트 13종 + 렌더 5폭 재실행 결과는 §6 과 동일(§6.1 표 갱신).
